# wrangle

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  types.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/prisma/: schema.prisma
src-tauri/src/: main.rs
src/components/: BaseModal.tsx  TagBadge.tsx  TagSelector.tsx
src/components/BaseModal/: BaseModal.test.tsx  BaseModal.tsx
src/components/Combobox/: Combobox.test.tsx  Combobox.tsx  ComboboxInput.tsx  ComboboxList.tsx
src/components/ProjectList/: Project.tsx  ProjectList.test.tsx  ProjectList.tsx  ProjectWikiLinkButton.tsx
src/components/Sidebar/: Sidebar.test.tsx  Sidebar.tsx  SidebarTab.tsx
src/components/TagSelector/: TagSelector.test.tsx  TagSelector.tsx
src/components/Toolbar/: SearchBar.tsx  TagBar.tsx  Toolbar.test.tsx  Toolbar.tsx
src/components/fields/: ProjectWikiFilepathField.tsx  ProjectWikiURLField.tsx  SelectField.tsx  TagSelectorField.tsx  TextField.tsx
src/components/modals/: AddProjectModal.tsx  MasterDataModal.tsx
wrangle/: package-lock.json  package.json
wrangle/src/: App.css  App.tsx  styles.css  types.ts
wrangle/src-tauri/: Cargo.toml  tauri.conf.json
wrangle/src-tauri/capabilities/: migrated.json
wrangle/src-tauri/prisma/: schema.prisma
wrangle/src-tauri/src/: main.rs
wrangle/src/components/: ProjectList.tsx  Sidebar.tsx  SidebarTab.tsx  TagBadge.tsx  TagSelector.tsx  Toolbar.tsx
wrangle/src/db/: database.ts  schema.ts
(+21 files in other folders)
